nohup.out
BASH=/bin/bash
BASHOPTS=cmdhist:complete_fullquote:extquote:force_fignore:hostcomplete:interactive_comments:progcomp:promptvars:sourcepath
BASH_ALIASES=()
BASH_ARGC=()
BASH_ARGV=()
BASH_CMDS=()
BASH_LINENO=([0]="0")
BASH_SOURCE=([0]="experiments.mrd/scanphi500b/script")
BASH_VERSINFO=([0]="4" [1]="4" [2]="20" [3]="1" [4]="release" [5]="x86_64-pc-linux-gnu")
BASH_VERSION='4.4.20(1)-release'
DIRSTACK=()
EUID=162515747
GPU=2
GROUPS=()
HOME=/home/mrdouglas
HOSTNAME=aiorion
HOSTTYPE=x86_64
IFS=$' \t\n'
KRB5CCNAME=FILE:/tmp/krb5cc_162515747_ESTuCD
LANG=en_US.UTF-8
LD_LIBRARY_PATH=/usr/local/cuda-10.1/lib64
LESSCLOSE='/usr/bin/lesspipe %s %s'
LESSOPEN='| /usr/bin/lesspipe %s'
LOGNAME=mrdouglas
LS_COLORS='rs=0:di=01;34:ln=01;36:mh=00:pi=40;33:so=01;35:do=01;35:bd=40;33;01:cd=40;33;01:or=40;31;01:mi=00:su=37;41:sg=30;43:ca=30;41:tw=30;42:ow=34;42:st=37;44:ex=01;32:*.tar=01;31:*.tgz=01;31:*.arc=01;31:*.arj=01;31:*.taz=01;31:*.lha=01;31:*.lz4=01;31:*.lzh=01;31:*.lzma=01;31:*.tlz=01;31:*.txz=01;31:*.tzo=01;31:*.t7z=01;31:*.zip=01;31:*.z=01;31:*.Z=01;31:*.dz=01;31:*.gz=01;31:*.lrz=01;31:*.lz=01;31:*.lzo=01;31:*.xz=01;31:*.zst=01;31:*.tzst=01;31:*.bz2=01;31:*.bz=01;31:*.tbz=01;31:*.tbz2=01;31:*.tz=01;31:*.deb=01;31:*.rpm=01;31:*.jar=01;31:*.war=01;31:*.ear=01;31:*.sar=01;31:*.rar=01;31:*.alz=01;31:*.ace=01;31:*.zoo=01;31:*.cpio=01;31:*.7z=01;31:*.rz=01;31:*.cab=01;31:*.wim=01;31:*.swm=01;31:*.dwm=01;31:*.esd=01;31:*.jpg=01;35:*.jpeg=01;35:*.mjpg=01;35:*.mjpeg=01;35:*.gif=01;35:*.bmp=01;35:*.pbm=01;35:*.pgm=01;35:*.ppm=01;35:*.tga=01;35:*.xbm=01;35:*.xpm=01;35:*.tif=01;35:*.tiff=01;35:*.png=01;35:*.svg=01;35:*.svgz=01;35:*.mng=01;35:*.pcx=01;35:*.mov=01;35:*.mpg=01;35:*.mpeg=01;35:*.m2v=01;35:*.mkv=01;35:*.webm=01;35:*.ogm=01;35:*.mp4=01;35:*.m4v=01;35:*.mp4v=01;35:*.vob=01;35:*.qt=01;35:*.nuv=01;35:*.wmv=01;35:*.asf=01;35:*.rm=01;35:*.rmvb=01;35:*.flc=01;35:*.avi=01;35:*.fli=01;35:*.flv=01;35:*.gl=01;35:*.dl=01;35:*.xcf=01;35:*.xwd=01;35:*.yuv=01;35:*.cgm=01;35:*.emf=01;35:*.ogv=01;35:*.ogx=01;35:*.aac=00;36:*.au=00;36:*.flac=00;36:*.m4a=00;36:*.mid=00;36:*.midi=00;36:*.mka=00;36:*.mp3=00;36:*.mpc=00;36:*.ogg=00;36:*.ra=00;36:*.wav=00;36:*.oga=00;36:*.opus=00;36:*.spx=00;36:*.xspf=00;36:'
MACHTYPE=x86_64-pc-linux-gnu
MAIL=/var/mail/mrdouglas
OLDPWD=/home/mrdouglas/Manifold/experiments.mrd
OPTERR=1
OPTIND=1
OSTYPE=linux-gnu
PATH=/home/mrdouglas/Manifold/bin:/home/mrdouglas/.local/bin:/usr/local/cuda-10.1/bin:/usr/local/cuda-10.1/NsightCompute-2019.1:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/snap/bin
PPID=44541
PS4='+ '
PWD=/home/mrdouglas/Manifold
SEED=1729
SHELL=/bin/bash
SHELLOPTS=braceexpand:hashall:interactive-comments
SHLVL=2
SSH_CLIENT='129.49.6.206 59819 130'
SSH_CONNECTION='129.49.6.206 59819 130.245.162.50 130'
SSH_TTY=/dev/pts/0
TERM=xterm-256color
UID=162515747
USER=mrdouglas
VIRTUAL_ENV=/home/mrdouglas/Manifold
XDG_DATA_DIRS=/usr/local/share:/usr/share:/var/lib/snapd/desktop
XDG_RUNTIME_DIR=/run/user/162515747
XDG_SESSION_ID=246
_=/usr/bin/nohup
seed=1729 gpu=2
  File "biholoNN_exp_100_500_100_f1long_rate01.py", line 30
    f = z0**5 + z1**5 + z2**5 + z3**5 + z4**5 + psi*z0*z1*z2*z3*z4 + phi*(z3*(z4**4) + (z3**2)*(z4**3) + (z3**3)*(z4**2) + (z3**4)*z4)
    ^
IndentationError: unexpected indent
Command exited with non-zero status 1
0.02user 0.00system 0:00.03elapsed 96%CPU (0avgtext+0avgdata 9524maxresident)k
0inputs+0outputs (0major+1101minor)pagefaults 0swaps
  File "biholoNN_exp_100_500_100_f1long_rate01.py", line 30
    f = z0**5 + z1**5 + z2**5 + z3**5 + z4**5 + psi*z0*z1*z2*z3*z4 + phi*(z3*(z4**4) + (z3**2)*(z4**3) + (z3**3)*(z4**2) + (z3**4)*z4)
    ^
IndentationError: unexpected indent
Command exited with non-zero status 1
0.05user 0.01system 0:00.06elapsed 94%CPU (0avgtext+0avgdata 9424maxresident)k
0inputs+0outputs (0major+1098minor)pagefaults 0swaps
  File "biholoNN_exp_100_500_100_f1long_rate01.py", line 30
    f = z0**5 + z1**5 + z2**5 + z3**5 + z4**5 + psi*z0*z1*z2*z3*z4 + phi*(z3*(z4**4) + (z3**2)*(z4**3) + (z3**3)*(z4**2) + (z3**4)*z4)
    ^
IndentationError: unexpected indent
Command exited with non-zero status 1
0.02user 0.00system 0:00.03elapsed 96%CPU (0avgtext+0avgdata 9528maxresident)k
0inputs+8outputs (0major+1101minor)pagefaults 0swaps
  File "biholoNN_exp_100_500_100_f1long_rate01.py", line 30
    f = z0**5 + z1**5 + z2**5 + z3**5 + z4**5 + psi*z0*z1*z2*z3*z4 + phi*(z3*(z4**4) + (z3**2)*(z4**3) + (z3**3)*(z4**2) + (z3**4)*z4)
    ^
IndentationError: unexpected indent
Command exited with non-zero status 1
0.05user 0.01system 0:00.07elapsed 98%CPU (0avgtext+0avgdata 9448maxresident)k
0inputs+0outputs (0major+1101minor)pagefaults 0swaps
  File "biholoNN_exp_100_500_100_f1long_rate01.py", line 30
    f = z0**5 + z1**5 + z2**5 + z3**5 + z4**5 + psi*z0*z1*z2*z3*z4 + phi*(z3*(z4**4) + (z3**2)*(z4**3) + (z3**3)*(z4**2) + (z3**4)*z4)
    ^
IndentationError: unexpected indent
Command exited with non-zero status 1
0.02user 0.00system 0:00.03elapsed 93%CPU (0avgtext+0avgdata 9536maxresident)k
0inputs+0outputs (0major+1102minor)pagefaults 0swaps
  File "biholoNN_exp_100_500_100_f1long_rate01.py", line 30
    f = z0**5 + z1**5 + z2**5 + z3**5 + z4**5 + psi*z0*z1*z2*z3*z4 + phi*(z3*(z4**4) + (z3**2)*(z4**3) + (z3**3)*(z4**2) + (z3**4)*z4)
    ^
IndentationError: unexpected indent
Command exited with non-zero status 1
0.05user 0.02system 0:00.07elapsed 98%CPU (0avgtext+0avgdata 9540maxresident)k
0inputs+0outputs (0major+1103minor)pagefaults 0swaps
  File "biholoNN_exp_100_500_100_f1long_rate01.py", line 30
    f = z0**5 + z1**5 + z2**5 + z3**5 + z4**5 + psi*z0*z1*z2*z3*z4 + phi*(z3*(z4**4) + (z3**2)*(z4**3) + (z3**3)*(z4**2) + (z3**4)*z4)
    ^
IndentationError: unexpected indent
Command exited with non-zero status 1
0.01user 0.00system 0:00.02elapsed 96%CPU (0avgtext+0avgdata 9524maxresident)k
0inputs+0outputs (0major+1101minor)pagefaults 0swaps
  File "biholoNN_exp_100_500_100_f1long_rate01.py", line 30
    f = z0**5 + z1**5 + z2**5 + z3**5 + z4**5 + psi*z0*z1*z2*z3*z4 + phi*(z3*(z4**4) + (z3**2)*(z4**3) + (z3**3)*(z4**2) + (z3**4)*z4)
    ^
IndentationError: unexpected indent
Command exited with non-zero status 1
0.05user 0.00system 0:00.06elapsed 98%CPU (0avgtext+0avgdata 9536maxresident)k
0inputs+0outputs (0major+1103minor)pagefaults 0swaps
cat: 'experiments.mrd/scanphi500b/*/summary.txt': No such file or directory
